Add stub player/game stats html

--- a/client/shared/main.css
+++ b/client/shared/main.css
@@ -17,6 +17,9 @@ canvas {
     margin: auto;
 }
 
+div.sidebarStats > p {
+    margin: 5px;
+}
 
 /******************************** LEGACY CSS ********************************/
 
