--- a/client/shared/main.css
+++ b/client/shared/main.css
@@ -1,3 +1,21 @@
+.hidden {
+    display: none;
+}
+
+.no-close .ui-dialog-titlebar-close {
+    display: none;
+}
+
+.card-choice {
+    float: left;
+    margin: 0px 5px;
+}
+
+.card-choice-img {
+    display: block;
+    width: 200px;
+}
+
 #board {
     position: relative;
     margin: auto;
