--- a/client/shared/main.css
+++ b/client/shared/main.css
@@ -49,7 +49,8 @@ canvas {
 }
 
 div.sidebarStats > p {
-    margin: 5px 0px;
+    margin: 2px 0px;
+    font-size: 14px;
 }
 
 .sidebarStats.enabled {
@@ -60,12 +61,18 @@ div.sidebarStats > p {
     color: gray;
 }
 
+#playerStats {
+    position: absolute;
+    top: 645px;
+    left: 550px;
+}
+
 #history {
     overflow-y: scroll;
     width: 540px;
     height: 100px;
     position: absolute;
-    top: 650px;
+    top: 645px;
 }
 
 #history > p {
