--- a/client/shared/main.css
+++ b/client/shared/main.css
@@ -49,7 +49,7 @@ canvas {
 }
 
 div.sidebarStats > p {
-    margin: 2px 0px;
+    margin: 0px;
     font-size: 14px;
 }
 
@@ -77,7 +77,8 @@ div.sidebarStats > p {
 
 #history > p {
     font-size: 12px;
-    margin: 2px 0px;
+    margin: 0px;
+    line-height: 15px;
 }
 
 div#sidebar {
