--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -2,6 +2,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: Monaco;
 }
 
+div.runStatusContainer > p {
+    color: red;
+    text-align: center;
+}
+
 .hidden {
     display: none;
 }
